Alignment fixes

--- a/src/styles/Product.css
+++ b/src/styles/Product.css
@@ -56,6 +56,7 @@
   font-size: 1rem;
   font-weight: 550;
   color: #e0e0e0;
+  min-height: 55px;
   margin-left: 5px;
   margin-right: 5px;
   margin-bottom: 24px;
